Home link to Ro damage Calculator

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width=device=width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Documnet</title>
+		<script data-ad-client="ca-pub-9385178807077927" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     </head>
     <body>
-        <h1>yoyo dotayo 2</h1>
+        <a href="https://landgris.github.io/ROCalculator/" target="_blank"><span style="color: black;">RO Damage Calculator</span></a>
     <body>
 </html>
 
